--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ num = "0.4"
 svg = {version = "0.18", optional = true}
 resvg = {version = "0.45", optional = true, default-features=false}
 serde = { version = "1", features = ["derive", "rc"], optional = true }
+serde_json = { version = "1", optional = true }
 thiserror = "2.0"
 multimap = "0.10"
 
@@ -80,7 +81,7 @@ wasm_support = ["chrono/wasmbind"]
 experimental_features = []
 
 #/// Adds support for serde Serialize and Deserialize for outward facing structs
-serde = ["dep:serde"]
+serde = ["dep:serde", "dep:serde_json"]
 
 #/// Adds otsu binarizer support using imageproc
 otsu_level = ["image"]
