--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["barcode", "barcode_1d", "barcode_2d", "barcode_reader", "barcode_wr
 clap = { version = "4.5.23", features = ["derive"] }
 rxing = {path = "../../", version = "~0.8.3", features = ["image", "svg_read", "svg_write"] }
 serde_json = "1.0.140"
+image = "0.25"
 
 #[profile.release]
 #debug = true
